k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-microservice-deployment
  labels:
    app: simple-microservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-microservice
  template:
    metadata:
      labels:
        app: simple-microservice
    spec:
      containers:
        - name: simple-microservice
          image: saurabhdocker13/simple-microservice:latest
          ports:
            - containerPort: 80
