k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-microservice-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:405078935392:certificate/ba96620e-c2dd-4f3b-abfc-94f3d00e019f
spec:
  ingressClassName: alb
  rules:
    - host: devildevops.live
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-microservice-service
                port:
                  number: 80
